--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.5",
+    "nodemailer": "^7.0.5",
     "zod": "^4.0.10"
   },
   "devDependencies": {
@@ -24,6 +25,7 @@
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/nodemailer": "^6.4.17",
     "typescript": "^5.8.3"
   }
 }
